fix: resource link position on mobile screen

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -379,7 +379,7 @@
   }
 
   .resources{
-    padding: 0 5%;
+    padding: 0 3%;
 
     h2{
       margin-top: 10%;
